# rust-programs

./: .gitignore  README.md  ddu.rs  gg-rust.rs  rust-tcp.rs
cli-todo/src/: main.rs
ddu/: Cargo.toml
hct/: combined.rs  core_alg.rs  data-structure.rs  decoder.rs  encoder.rs  l_prob.rs  tests.rs  token_freq.rs
pass-gen/: Cargo.toml
pass-gen/src/: main.rs  old.rs  passwords.rs
rest-app-server/: Cargo.toml
sdu/: Cargo.toml
sgrep/: Cargo.toml
sgrep/src/: main.rs  progress_bar.rs  sgrep.rs  test.txt
sgrep/src/prev-ver/: 1.0main.rs  1.1main.rs  parser.rs
test-client/: Cargo.toml
test-web/: Cargo.toml
test-web/src/: main.rs
