[package]
name = "sgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "3.0.0", features = ["derive"] }
env_logger = "0.11.3"
indicatif = "0.17.8"
log = "0.4.21"
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
